# UniFlashTool

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  STYLE.md  build.sh  debug.sh  readme.md  uniflashtool.desktop
.github/workflows/: cmake-multi-platform.yml  release.yml
data/distro/: alpine.json  arch.json  debian.json  gentoo.json
data/langs/: en.json  fr.json
data/repos/default/: repo.json
deployment/linux/: UniFlash.desktop
src/: main.cpp
src/gui/: Translate.hpp  UniFlash.cpp  UniFlash.hpp
src/gui/dialogs/: Flash.cpp  Flash.hpp  GitHubTool.cpp  GitHubTool.hpp  RepoDialog.cpp  RepoDialog.hpp
src/gui/elements/: LabeledWidget.cpp  LabeledWidget.hpp  LayoutElement.cpp  LayoutElement.hpp  ToolWidget.cpp  ToolWidget.hpp
src/platform/: deps.cpp  deps.hpp
src/tools/: Config.cpp  Config.hpp  flash.cpp  flash.h  tools.cpp  tools.h
src/tools/defaults/: ROM.cpp  ROM.hpp  Recovery.cpp  Recovery.hpp  index.md
src/tools/sourceforge/: SourceForgeHandler.hpp
